fix(jdk17): replace List.getFirst() with get(0) in PageManagerFlushThreadInterruptTest
JDK21-only List.getFirst() is not available on Java 17. Introduced by
cherry-pick of a5b81743cc6aaad132484b3aea56e5284d8db1ad.